# SmdWindow

./: CMakeLists.txt  README.md
msvc/: GlWindow.dsp  GlWindow.dsw
resource/: resource.h  resource.rc
source/: CCommonDialogs.cpp  CCommonDialogs.h  CControl.cpp  CControl.h  CMainFrame.cpp  CMainFrame.h  COpenGL.cpp  COpenGL.h  CWin.h  GLData.cpp  GLData.h  GLWindow.cpp  GLWindow.h  data_types.h
